Closed
Bug 1335678
Opened 8 years ago
Closed 8 years ago
Add diagnostic assertions to see if OriginAttributes and loadGroup are in sync
Categories
(Core :: DOM: Security, defect, P3)
Core
DOM: Security
Tracking
()
RESOLVED
FIXED
mozilla54
People
(Reporter: baku, Assigned: baku)
References
(Blocks 1 open bug)
Details
(Whiteboard: [tor][domsecurity-backlog1][OA])
Attachments
(1 file, 2 obsolete files)
6.77 KB,
patch
|
ehsan.akhgari
:
review+
|
Details | Diff | Splinter Review |
+++ This bug was initially created as a clone of Bug #1302566 +++
Assignee | ||
Comment 1•8 years ago
|
||
Assignee: nobody → amarchesini
Attachment #8832374 -
Flags: review?(ehsan)
Comment 2•8 years ago
|
||
Comment on attachment 8832374 [details] [diff] [review]
revert.patch
Review of attachment 8832374 [details] [diff] [review]:
-----------------------------------------------------------------
::: dom/base/nsContentUtils.cpp
@@ +1812,5 @@
> + return isPrivate;
> + }
> +
> + nsCOMPtr<nsIChannel> channel = aDoc->GetChannel();
> + return channel && NS_UsePrivateBrowsing(channel);
It's not really great that we're now exposing a different way of getting this info from nsContentUtils.
I think what you want instead is to make this a private static function, and expose a VerifyDocumentPrivateBrowsingState() that will compute the information both using the OA from the principal and the helper mentioned above, and asserts they're the same.
Attachment #8832374 -
Flags: review?(ehsan) → review-
Comment 3•8 years ago
|
||
[Tracking Requested - why for this release]:
https://bugzilla.mozilla.org/show_bug.cgi?id=1302566 landed in Firefox 54. We should have the assertions that validate that that conversion happens properly in the same release. Otherwise, we risk introducing a bug in private mode / regular mode separation.
tracking-firefox54:
--- → ?
Assignee | ||
Comment 4•8 years ago
|
||
Attachment #8832374 -
Attachment is obsolete: true
Attachment #8832833 -
Flags: review?(ehsan)
Updated•8 years ago
|
Attachment #8832833 -
Flags: review?(ehsan) → review+
Comment 5•8 years ago
|
||
baku said when he pushed this to try, he got lots of failures. So he is going to back out https://bugzilla.mozilla.org/show_bug.cgi?id=1302566 after all.
Assignee | ||
Comment 7•8 years ago
|
||
The previous patch broke everything. We need to revert the commit and see why there are so many failures with these assertions.
Attachment #8832833 -
Attachment is obsolete: true
Attachment #8833918 -
Flags: review?(ehsan)
Comment 8•8 years ago
|
||
Comment on attachment 8833918 [details] [diff] [review]
revert_a.patch
Review of attachment 8833918 [details] [diff] [review]:
-----------------------------------------------------------------
Sadface :(
Attachment #8833918 -
Flags: review?(ehsan) → review+
Pushed by amarchesini@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/7c00dba4cfdf
Revert patch for bug 1302566, r=ehsan
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in
before you can comment on or make changes to this bug.
Description
•