Bug 1335678 - Revert patch for bug 1302566, r=ehsan