dom/workers/ServiceWorkerManager.cpp
@@ -2561,7 +2561,7 @@ ServiceWorkerManager::IsControlled(nsIDocument* aDoc, ErrorResult& aRv)
 {
   MOZ_ASSERT(aDoc);
 
-  if (aDoc->NodePrincipal()->OriginAttributesRef().mPrivateBrowsingId) {
+  if (nsContentUtils::IsInPrivateBrowsing(aDoc)) {
     // Handle the case where a service worker was previously registered in
     // a non-private window (bug 1255621).
     return false;
